<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.farm.FarmDetailActivity">

    <FrameLayout
        android:id="@+id/farm_detail_frame"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/farm_detail_image"
            android:background="@color/gray_first"
            android:layout_width="match_parent"
            android:layout_height="329dp"
            app:layout_constraintTop_toBottomOf="@+id/farm_detail_toolbar"/>

        <include
            android:id="@+id/farm_detail_toolbar"
            layout="@layout/toolbar_without_title"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/farm_detail_bookmark_button"
                android:background="@drawable/bookmark_stroke_vector_image"
                android:backgroundTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/farm_detail_share_button"
                app:layout_constraintVertical_bias="0.5"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/farm_detail_share_button"
                android:background="@drawable/sharing_second_vector_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginEnd="7dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        style="@style/Body2Reg"
        android:id="@+id/farm_detail_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_address"
        android:layout_marginTop="19dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_frame"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        style="@style/Title2"
        android:id="@+id/farm_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_farm_title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_address"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/farm_size_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/layout_line_vector_image"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        style="@style/Body2Reg"
        android:id="@+id/farm_detail_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_farm_size"
        android:layout_marginTop="48dp"
        android:layout_marginStart="3dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_title"
        app:layout_constraintStart_toEndOf="@id/farm_size_icon"
        />

    <TextView
        style="@style/Title2"
        android:id="@+id/farm_detail_price"
        android:textColor="@color/main_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_farm_price"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/farm_size_icon"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        style="@style/Body2Reg"
        android:id="@+id/farm_detail_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_farm_detail_views"
        android:layout_marginTop="18dp"
        android:layout_marginStart="3dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_size"
        app:layout_constraintStart_toEndOf="@id/farm_detail_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        />

    <View
        android:id="@+id/divider_1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_second"
        android:layout_marginTop="24.5dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_price"
        />

    <TextView
        style="@style/Title2"
        android:id="@+id/farm_detail_description_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_detail_description_title"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/divider_1"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        style="@style/Body1Reg"
        android:id="@+id/farm_detail_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_description_title"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/example_farm_description"
        />

    <View
        android:id="@+id/divider_2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_second"
        android:layout_marginTop="24.5dp"
        app:layout_constraintTop_toBottomOf="@id/farm_detail_description"
        />

    <androidx.appcompat.widget.Toolbar
        android:background="@drawable/request_bar_background"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/farm_detail_request_message"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:button="@null"
                android:src="@drawable/message_vector_image"
                android:background="@drawable/farm_detail_request_background"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/farm_detail_request_calendar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:button="@null"
                android:src="@drawable/calendar_vector_image"
                android:background="@drawable/main_button_color_selector"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.3"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/farm_detail_request"
                android:layout_width="206dp"
                android:layout_height="48dp"
                android:background="@drawable/farm_detail_request_background"
                style="@style/Body1Med"
                android:text="@string/request"
                android:textColor="@color/main_green"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.85"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


</androidx.constraintlayout.widget.ConstraintLayout>